base/home-assistant.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 0
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true # equivalent to network_mode: host
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:stable
          securityContext:
            privileged: true # privileged mode
          volumeMounts:
            - name: config
              mountPath: /config
            - name: localtime-volume
              mountPath: /etc/localtime
              readOnly: true
      #            - name: dbus-volume
      #              mountPath: /run/dbus
      #              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config-pvc
        - name: localtime-volume
          hostPath:
            path: /etc/localtime
            type: File
        - name: dbus-volume
          hostPath:
            path: /run/dbus
            type: Directory
