base/tor.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tor
  labels:
    app: tor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tor
  template:
    metadata:
      labels:
        app: tor
    spec:
      containers:
        - name: tor
          image: peterdavehello/tor-socks-proxy:latest
          ports:
            - containerPort: 9150
          
---
apiVersion: v1
kind: Service
metadata:
  name: tor
  labels:
    app: tor
spec:
  selector:
    app: tor
  ports:
    - protocol: TCP
      port: 9150
      targetPort: 9150
  type: ClusterIP
