base/fb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-browser
  labels:
    app: file-browser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-browser
  template:
    metadata:
      labels:
        app: file-browser
    spec:
      containers:
        - name: file-browser
          image: "filebrowser/filebrowser:s6"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /config
            - name: database
              mountPath: /database
            - name: root
              mountPath: /srv
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: file-browser-config-pvc
        - name: database
          persistentVolumeClaim:
            claimName: file-browser-db-pvc

        - name: root
          hostPath:
            path: /
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: file-browser
  labels:
    app: file-browser
spec:
  selector:
    app: file-browser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-browser-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: duckdns
spec:
  rules:
    - host: placeholer
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-browser
                port:
                  number: 80
